objects/ssot__ProgramBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitManagerId__c</fullName>
        <label>Benefit Manager</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitStatus__c</fullName>
        <label>Benefit Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitType__c</fullName>
        <label>Benefit Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentMonthDisbursedQty__c</fullName>
        <label>Current Month Disbursed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentYearAssignedQty__c</fullName>
        <label>Current Year Assigned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentYearDisbursedQty__c</fullName>
        <label>Current Year Disbursed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentCount__c</fullName>
        <label>Enrollment Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GoalDefinitionId__c</fullName>
        <label>Goal Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Program Benefit Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Active</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumBenefitAmount__c</fullName>
        <label>Maximum Benefit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumBenefitAmount__c</fullName>
        <label>Minimum Benefit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Benefit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousMonthDisbursedQty__c</fullName>
        <label>Previous Month Disbursed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousYearAssignedQty__c</fullName>
        <label>Previous Year Assigned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousYearDisbursedQty__c</fullName>
        <label>Previous Year Disbursed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668973518_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramBenefit_ProgramId_map_Program_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>ProgramBenefit_ProgramId_map_Program_rel</relationshipLabel>
        <relationshipName>rel_1716668973518_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668983080_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramBenefit_GoalDefinitionId_map__rel</label>
        <referenceTo>ssot__GoalDefinition__dlm</referenceTo>
        <relationshipLabel>ProgramBenefit_GoalDefinitionId_map__rel</relationshipLabel>
        <relationshipName>rel_1716668983080_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668989843_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramBenefit_BenefitManagerId_map__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ProgramBenefit_BenefitManagerId_map__rel</relationshipLabel>
        <relationshipName>rel_1716668989843_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>